--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
             <button id="nav-queue" class="nav-button">Queue</button>
             <button id="nav-gallery" class="nav-button">Gallery</button>
             <button id="nav-models" class="nav-button">Models</button>
+            <button id="nav-downloads" class="nav-button">Downloads</button>
             <button id="nav-server-setup" class="nav-button">Server Setup</button>
         </nav>
     </header>
@@ -311,6 +312,15 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section id="downloads-view" style="display: none;">
+            <h2>Model Downloads</h2>
+            
+            <div id="downloads-container" class="card">
+                <!-- Download manager UI will be rendered here -->
+                <div class="loader">Loading download manager...</div>
             </div>
         </section>
 
