Major model scanning and hash calculation improvements - Enhanced AutoV2 hash calculation with proper 1MB algorithm - Fixed preview image handling and model type detection - Added database-first hash lookup to avoid redundant calculations - Improved deployment script with Docker cleanup automation - Enhanced model details modal with comprehensive metadata display - Added comprehensive test scripts for debugging model scanning - Updated documentation with detailed 8-step scanning workflow

--- a/public/index.html
+++ b/public/index.html
@@ -291,6 +291,13 @@
                         Calculate hashes during scan (AutoV2, up to 15GB files, ~7.5min for large files)
                     </label>
                 </div>
+                <div class="search-row">
+                    <div class="search-container">
+                        <input type="text" id="model-search-input" placeholder="Search models by name, type, or metadata..." class="search-input">
+                        <button id="clear-search-btn" class="clear-search-btn" style="display: none;">&times;</button>
+                        <span id="search-results-count" class="search-results-count"></span>
+                    </div>
+                </div>
                 <div class="filter-row">
                     <div class="filter-group-left">
                         <label for="model-type-filter">Type:</label>
