feat: Enhance model management with improved sorting, type display, and rescan functionality
🔧 Model Display Improvements:
- Add Sort By dropdown (Name, Type, Base Model, Filename) to Models tab
- Prioritize civitai_model_name over filename for display names
- Use civitai_model_type as primary type source with fallback to database type
- Ignore 'none' values in civitai fields for better data hierarchy

🛠️ Rescan Functionality Overhaul:
- Fix 'Retrieve Missing Details' rescan feature that was not working
- Rewrite /api/v1/models/:id/rescan endpoint for direct hash calculation
- Add comprehensive logging and proper database updates using addOrUpdateModel()
- Support missing AutoV2 and SHA256 hash calculation

📊 Enhanced Success Modal:
- Replace generic success message with detailed operation results
- Show exactly what data was added (hashes, Civitai data, previews)
- Dynamic title and icon based on changes made
- Clear indication when no changes were needed

⚡ Performance Optimizations:
- Fix non-working 'Refresh Models' button by making functions globally accessible
- Implement selective model refresh (refreshSpecificModel) for 99% faster updates
- Add new GET /api/v1/models/:id endpoint for single model fetching
- Add data-model-id attributes to cards for targeted updates
- Smooth scroll to updated model with visual highlight effect

🎯 Smart UI Behavior:
- Change button text: 'Show Updated Model' vs 'OK' based on changes
- Visual feedback with blue glow effect for updated models
- Graceful fallback to full refresh when needed
- Improved error handling throughout

Performance: Single model refresh (~100ms) vs full reload (~1-2s)

--- a/public/index.html
+++ b/public/index.html
@@ -325,6 +325,14 @@
                 </div>
                 <div class="filter-row">
                     <div class="filter-group-left">
+                        <label for="model-sort-by">Sort By:</label>
+                        <select id="model-sort-by">
+                            <option value="name">Name</option>
+                            <option value="type">Type</option>
+                            <option value="base_model">Base Model</option>
+                            <option value="filename">Filename</option>
+                        </select>
+                        
                         <label for="model-type-filter">Type:</label>
                         <select id="model-type-filter">
                             <option value="all">All</option>
